--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="main">
       <div class="menu">
+        <h2>Elias Centurion</h2>
         <ul>
           <li><a href="default.asp">Home</a></li>
           <li><a href="news.asp">News</a></li>
